# gameEngine

./: CMakeLists.txt  main.cpp
Code/: Config.cpp  Config.h  Entity.cpp  Entity.h  GameEngine.cpp  GameEngine.h  MainMenu.cpp  MainMenu.h  Utils.cpp  Utils.h
Code/ Animation/: Animation.cpp  Animation.h
Code/Chest/: Chest.cpp  Chest.h
Code/Enemy/: Enemy.cpp  Enemy.h
Code/Enemy/Enemy Bat/: Enemy_Bat.cpp  Enemy_Bat.h
Code/Enemy/Enemy BigGhost/: Enemy_BigGhost.cpp  Enemy_BigGhost.h
Code/Enemy/Enemy Boom/: Enemy_Boom.cpp  Enemy_Boom.h
Code/Enemy/Enemy Ghost/: Enemy_Ghost.cpp  Enemy_Ghost.h
Code/Enemy/Enemy Mag/: Enemy_Mag.cpp  Enemy_Mag.h
Code/Enemy/Enemy Scelet/: Enemy_Scelet.cpp  Enemy_Scelet.h
Code/GameEngine/: GameEngineTake.cpp  GameEngine_init.cpp
Code/Image/: CreateImage.cpp  CreateImage.h
Code/Items/: Item.cpp  Item.h
Code/Items/Equipment/: equipment_item.cpp  equipment_item.h
Code/Items/Health/: health_item.cpp  health_item.h
Code/Items/Item/: Item.cpp  Item.h
Code/Items/Key/: key_item.cpp  key_item.h
Code/Items/Money/: money_item.cpp  money_item.h
Code/Items/Particle_Strength/: Particle_of_Strength_item.cpp  Particle_of_Strength_item.h
Code/Map/: GameLvL.cpp  GameLvL.h
Code/Melody/: m_Music.cpp  m_Music.h  s_Sound.cpp  s_Sound.h
Code/Nps/: Nps.cpp  Nps.h
Code/Nps/Aiden/: Aiden.cpp  Aiden.h
Code/Nps/Asya/: Asya.cpp  Asya.h
Code/Nps/Blacksmith/: Blacksmith.cpp  (+1 more)
Code/Object/: Object.cpp  Object.h
Code/Particle/: ParticleSystem.h
Code/Player/: Player.cpp  Player.h
Code/Shader/: CreateShader.cpp  CreateShader.h
Code/Text/: CreateText.cpp  CreateText.h
GameEngine/: GameEngineTake.cpp  GameEngine_init.cpp
data/: General
(+30 files in other folders)
